...
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_round" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="101dp"
        android:autofillHints=""
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="275dp"
        android:background="@drawable/button_gradient"
        android:fontFamily="@font/roboto_family"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="275dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_family"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgot_password"
        android:layout_width="207dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/roboto_family"
        android:text="@string/forgot_pwd"
...
