...
        app:layout_constraintBottom_toTopOf="@id/layout_send"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chat_info"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
...
