...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/maps_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:scaleType="fitEnd"
                android:text="@string/daily_route"
                android:textSize="11sp" />

            <Button
                android:id="@+id/street_view_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:scaleType="fitEnd"
                android:text="@string/street_view"
...
